--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <!--<link rel="stylesheet" href='static/style.css'>-->
     <title>Sample App</title>
   </head>
   <body>
