--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id='root'>
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/Slider.js"></script>
   </body>
 </html>
